Feat: Add granular chat filtering (whitelist/blacklist)
- Added INCLUDE_CHAT_IDS and EXCLUDE_CHAT_IDS configuration
- Updated filtering logic to support specific chat IDs
- Updated documentation with examples

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,17 @@ MAX_MEDIA_SIZE_MB=100
 #   private,groups,channels = Everything
 CHAT_TYPES=private,groups,channels
 
+# Granular chat ID filtering (optional, advanced)
+# INCLUDE_CHAT_IDS: Whitelist mode - ONLY backup these specific chat IDs (comma-separated)
+# EXCLUDE_CHAT_IDS: Blacklist mode - Exclude these specific chat IDs (comma-separated)
+# Examples:
+#   INCLUDE_CHAT_IDS=123456789,987654321   = Only backup these 2 chats
+#   EXCLUDE_CHAT_IDS=555555555             = Backup everything except this chat
+#   CHAT_TYPES=groups + EXCLUDE_CHAT_IDS=111,222 = All groups except chat 111 and 222
+# Note: If INCLUDE_CHAT_IDS is set, it takes precedence (whitelist mode)
+# INCLUDE_CHAT_IDS=
+# EXCLUDE_CHAT_IDS=
+
 # Logging level
 # Options: DEBUG, INFO, WARNING, ERROR
 LOG_LEVEL=INFO
