Feat: Make batch size configurable via BATCH_SIZE env var

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,11 @@ DOWNLOAD_MEDIA=true
 # Files larger than this will be skipped
 MAX_MEDIA_SIZE_MB=100
 
+# Batch size for database insertions and progress logging
+# Higher values = faster but more memory usage
+# Default: 100
+BATCH_SIZE=100
+
 # Chat types to backup (comma-separated)
 # Options: private, groups, channels
 # Examples:
