--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       BACKUP_PATH: /data/backups
       DOWNLOAD_MEDIA: ${DOWNLOAD_MEDIA:-true}
       MAX_MEDIA_SIZE_MB: ${MAX_MEDIA_SIZE_MB:-100}
+      BATCH_SIZE: ${BATCH_SIZE:-100}
       CHAT_TYPES: ${CHAT_TYPES:-private,groups,channels}
       INCLUDE_CHAT_IDS: ${INCLUDE_CHAT_IDS:-}
       EXCLUDE_CHAT_IDS: ${EXCLUDE_CHAT_IDS:-}
