Feat: Implement granular filtering with global and per-type lists
- Added GLOBAL_INCLUDE/EXCLUDE_CHAT_IDS
- Added PRIVATE/GROUPS/CHANNELS_INCLUDE/EXCLUDE_CHAT_IDS
- Updated filtering logic priority
- Updated documentation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,19 @@ services:
       MAX_MEDIA_SIZE_MB: ${MAX_MEDIA_SIZE_MB:-100}
       BATCH_SIZE: ${BATCH_SIZE:-100}
       CHAT_TYPES: ${CHAT_TYPES:-private,groups,channels}
-      INCLUDE_CHAT_IDS: ${INCLUDE_CHAT_IDS:-}
-      EXCLUDE_CHAT_IDS: ${EXCLUDE_CHAT_IDS:-}
+
+      # Granular Filtering
+      GLOBAL_INCLUDE_CHAT_IDS: ${GLOBAL_INCLUDE_CHAT_IDS:-}
+      GLOBAL_EXCLUDE_CHAT_IDS: ${GLOBAL_EXCLUDE_CHAT_IDS:-}
+
+      PRIVATE_INCLUDE_CHAT_IDS: ${PRIVATE_INCLUDE_CHAT_IDS:-}
+      PRIVATE_EXCLUDE_CHAT_IDS: ${PRIVATE_EXCLUDE_CHAT_IDS:-}
+
+      GROUPS_INCLUDE_CHAT_IDS: ${GROUPS_INCLUDE_CHAT_IDS:-}
+      GROUPS_EXCLUDE_CHAT_IDS: ${GROUPS_EXCLUDE_CHAT_IDS:-}
+
+      CHANNELS_INCLUDE_CHAT_IDS: ${CHANNELS_INCLUDE_CHAT_IDS:-}
+      CHANNELS_EXCLUDE_CHAT_IDS: ${CHANNELS_EXCLUDE_CHAT_IDS:-}
 
       # Logging
       LOG_LEVEL: ${LOG_LEVEL:-INFO}
