--- a/.env.example
+++ b/.env.example
@@ -36,15 +36,42 @@ BATCH_SIZE=100
 CHAT_TYPES=private,groups,channels
 
 # Granular chat ID filtering (optional, advanced)
-# INCLUDE_CHAT_IDS: Whitelist mode - ONLY backup these specific chat IDs (comma-separated)
-# EXCLUDE_CHAT_IDS: Blacklist mode - Exclude these specific chat IDs (comma-separated)
+# Priority Order:
+# 1. Global Exclude (Blacklist)
+# 2. Type-Specific Exclude
+# 3. Global Include (Whitelist)
+# 4. Type-Specific Include
+# 5. Chat Type Filter (CHAT_TYPES)
+
+# Global Filters (Apply to all types)
+GLOBAL_INCLUDE_CHAT_IDS=
+GLOBAL_EXCLUDE_CHAT_IDS=
+
+# Private Chats Filters
+PRIVATE_INCLUDE_CHAT_IDS=
+PRIVATE_EXCLUDE_CHAT_IDS=
+
+# Groups Filters
+GROUPS_INCLUDE_CHAT_IDS=
+GROUPS_EXCLUDE_CHAT_IDS=
+
+# Channels Filters
+CHANNELS_INCLUDE_CHAT_IDS=
+CHANNELS_EXCLUDE_CHAT_IDS=
+
 # Examples:
-#   INCLUDE_CHAT_IDS=123456789,987654321   = Only backup these 2 chats
-#   EXCLUDE_CHAT_IDS=555555555             = Backup everything except this chat
-#   CHAT_TYPES=groups + EXCLUDE_CHAT_IDS=111,222 = All groups except chat 111 and 222
-# Note: If INCLUDE_CHAT_IDS is set, it takes precedence (whitelist mode)
-# INCLUDE_CHAT_IDS=
-# EXCLUDE_CHAT_IDS=
+# 1. Backup all private chats except one user:
+#    CHAT_TYPES=private
+#    PRIVATE_EXCLUDE_CHAT_IDS=123456789
+#
+# 2. Backup only specific channels (Whitelist):
+#    CHAT_TYPES=
+#    CHANNELS_INCLUDE_CHAT_IDS=100123456789,100987654321
+#
+# 3. Backup all groups but force include one specific channel:
+#    CHAT_TYPES=groups
+#    CHANNELS_INCLUDE_CHAT_IDS=100123456789
+
 
 # Logging level
 # Options: DEBUG, INFO, WARNING, ERROR
