--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,6 +4,19 @@ on:
   push:
     tags:
       - 'v*.*.*'
+    branches:
+      - master
+    paths:
+      - 'Dockerfile'
+      - 'requirements.txt'
+      - 'src/**'
+      - '.github/workflows/docker-publish.yml'
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Optional tag to use (e.g., v2.2.9). If not provided, uses latest from master.'
+        required: false
+        type: string
 
 env:
   DOCKER_IMAGE: drumsergio/telegram-backup-automation
@@ -37,8 +50,10 @@ jobs:
         with:
           images: ${{ env.DOCKER_IMAGE }}
           tags: |
-            type=semver,pattern={{version}}
-            type=raw,value=latest,enable=${{ !contains(github.ref, '-') }}
+            type=semver,pattern={{version}},enable=${{ startsWith(github.ref, 'refs/tags/') }}
+            type=raw,value=${{ inputs.tag }},enable=${{ inputs.tag != '' }}
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/master' && !inputs.tag }}
+            type=sha,prefix={{branch}}-
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
