feat: Add PostgreSQL support to Docker configuration
- Add database config options to .env.example
- Add DATABASE_URL and DB_TYPE variables to docker-compose
- Add optional PostgreSQL service with health checks
- Both services (backup + viewer) share database configuration
- Default remains SQLite for backward compatibility

--- a/.env.example
+++ b/.env.example
@@ -105,3 +105,34 @@ SESSION_NAME=telegram_backup
 # Useful for sharing public channel viewers without exposing other chats
 # Comma-separated list of chat IDs (e.g., 224091347,-100123456789)
 # DISPLAY_CHAT_IDS=
+
+# ================================
+# Database Configuration (v3.0+)
+# ================================
+# Telegram Archive supports multiple database backends:
+# - SQLite (default): Simple, no setup required
+# - PostgreSQL: Better for high-traffic deployments
+
+# Option 1: Use DATABASE_URL (takes priority)
+# SQLite example:
+# DATABASE_URL=sqlite:///data/telegram_backup.db
+# PostgreSQL example:
+# DATABASE_URL=postgresql://user:password@localhost:5432/telegram_backup
+
+# Option 2: Use individual settings
+# DB_TYPE: sqlite (default) or postgresql
+DB_TYPE=sqlite
+
+# SQLite settings (when DB_TYPE=sqlite)
+# DB_PATH: Path to SQLite database file
+DB_PATH=data/telegram_backup.db
+
+# PostgreSQL settings (when DB_TYPE=postgresql)
+# POSTGRES_HOST=localhost
+# POSTGRES_PORT=5432
+# POSTGRES_USER=telegram
+# POSTGRES_PASSWORD=your_secure_password
+# POSTGRES_DB=telegram_backup
+
+# Enable SQL query logging (for debugging)
+# DB_ECHO=false
