fix(db): Add server_default to timestamp columns and fix default paths
- Add server_default=func.now() to all created_at/updated_at columns in models
  to fix NULL values when using Core-style inserts (sqlite_insert/pg_insert)
- Update default DB_PATH from data/telegram_backup.db to /data/backups/telegram_backup.db
  for Docker backward compatibility with v2
- Fix migrate.py to use async driver prefixes (sqlite+aiosqlite, postgresql+asyncpg)

--- a/alembic.ini
+++ b/alembic.ini
@@ -27,7 +27,7 @@ output_encoding = utf-8
 
 # SQLAlchemy URL - this is overridden in env.py from environment variables
 # DO NOT put actual credentials here - use DATABASE_URL environment variable
-sqlalchemy.url = sqlite+aiosqlite:///data/telegram_backup.db
+sqlalchemy.url = sqlite+aiosqlite:////data/backups/telegram_backup.db
 
 [post_write_hooks]
 # Hooks to run after generating a migration
