docs: Update README and .env.example with v2 backward compatibility
- Document DATABASE_PATH, DATABASE_DIR support in README
- Clarify SQLite path resolution priority order
- Note v2 environment variable compatibility in .env.example

--- a/.env.example
+++ b/.env.example
@@ -119,7 +119,7 @@ SESSION_NAME=telegram_backup
 # PostgreSQL example:
 # DATABASE_URL=postgresql://user:password@localhost:5432/telegram_backup
 
-# Option 2: Use individual settings
+# Option 2: Use individual settings (v2 DATABASE_PATH/DATABASE_DIR also supported)
 # DB_TYPE: sqlite (default) or postgresql
 DB_TYPE=sqlite
 
