feat: add VERIFY_MEDIA option to re-download missing/corrupted media files
When VERIFY_MEDIA=true, after each backup the system will:
- Check all downloaded media files exist on disk
- Detect corrupted files (0 bytes or size mismatch)
- Re-download missing/corrupted files from Telegram
- Log summary of recovered and unrecoverable files

Useful for recovering from interrupted backups or accidentally deleted media.

Closes #8

--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,13 @@ BATCH_SIZE=100
 # Default: false
 SYNC_DELETIONS_EDITS=false
 
+# Media verification mode (Optional)
+# When enabled, checks all media files on disk after each backup
+# Re-downloads any missing or corrupted files from Telegram
+# Useful for recovering from interrupted backups or accidentally deleted media
+# Default: false
+VERIFY_MEDIA=false
+
 # Chat types to backup (comma-separated)
 # Options: private, groups, channels
 # Examples:
