feat: add real-time listener for message edits and deletions
- Add new TelegramListener class that catches edits/deletions as they happen
- Use Telethon event handlers (MessageEdited, MessageDeleted, NewMessage)
- Integrate listener into scheduler (runs alongside scheduled backups)
- Add ENABLE_LISTENER=true config option (default: false)
- Add delete_message_by_id_any_chat() DB method for edge cases
- Add tests for listener functionality
- Update docker-compose.yml with new config options
- Update README with real-time listener documentation

This provides an efficient alternative to SYNC_DELETIONS_EDITS which
batch-checks all messages. The listener stays connected and instantly
catches changes as they occur.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,14 @@ services:
       CHANNELS_INCLUDE_CHAT_IDS: ${CHANNELS_INCLUDE_CHAT_IDS:-}
       CHANNELS_EXCLUDE_CHAT_IDS: ${CHANNELS_EXCLUDE_CHAT_IDS:-}
 
+      # Real-time Sync Options
+      # ENABLE_LISTENER: Catches edits/deletions in real-time (recommended)
+      ENABLE_LISTENER: ${ENABLE_LISTENER:-false}
+      # SYNC_DELETIONS_EDITS: Batch-check ALL messages for edits/deletions (expensive!)
+      SYNC_DELETIONS_EDITS: ${SYNC_DELETIONS_EDITS:-false}
+      # VERIFY_MEDIA: Re-download missing/corrupted media files
+      VERIFY_MEDIA: ${VERIFY_MEDIA:-false}
+
       # Logging
       LOG_LEVEL: ${LOG_LEVEL:-INFO}
 
