--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,7 +60,7 @@ services:
 
     volumes:
       # Persistent data storage
-      - ./data:/data
+      - /mnt/cephfs:/data
     networks:
       - telegram-network
     # Uncomment to use PostgreSQL
@@ -82,7 +82,7 @@ services:
     container_name: telegram-viewer
     restart: unless-stopped
     ports:
-      - "8000:8000"
+      - "8795:8000"
     environment:
       BACKUP_PATH: /data/backups
       # Optional basic auth for the viewer (recommended)
@@ -101,7 +101,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-}
       POSTGRES_DB: ${POSTGRES_DB:-telegram_backup}
     volumes:
-      - ./data:/data
+      - /mnt/cephfs:/data
     networks:
       - telegram-network
     # Uncomment to use PostgreSQL
